apps/glance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: glance
  labels:
    app: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
      - name: glance
        image: glanceapp/glance:v0.8.4
        ports:
        - containerPort: 8080
          name: webui
        volumeMounts:
        - name: repo
          mountPath: /app/config
          subPath: homelab/apps/glance/config
          readOnly: true
        - name: repo
          mountPath: /app/assets
          subPath: homelab/apps/glance/assets
          readOnly: true
      volumes:
      - name: repo
        emptyDir: {}
