apps/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance-webui
  namespace: glance
spec:
  selector:
    app: glance
  ports:
  - name: webui
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: LoadBalancer
